src/core/generator/snapshots/tailcall__core__generator__from_json__test__generation_of_config_with_incompatible_json_properties.snap
---
source: src/core/generator/from_json.rs
expression: cgf_module.to_sdl()
---
schema @server @upstream(baseURL: "https://example.com") {
  query: Query
}

scalar Any

type Query {
  root: T1 @http(path: "/")
}

type T1 {
  campaignTemplates: Any
  colors: [Any]
}
