src/core/generator/snapshots/tailcall__core__generator__from_json__test__list_json_resp.snap
---
source: src/core/generator/from_json.rs
expression: cgf_module.to_sdl()
---
schema @server @upstream(baseURL: "https://example.com") {
  query: Query
}

type Query {
  root: [T1] @http(path: "/users")
}

type T1 {
  age: Int
  name: String
}
