src/core/generator/snapshots/tailcall__core__generator__from_json__test__nested_same_json_properties.snap
---
source: src/core/generator/from_json.rs
expression: cgf_module.to_sdl()
---
schema @server @upstream(baseURL: "https://example.com") {
  query: Query
}

type Query {
  root: T4 @http(path: "/")
}

type T1 {
  age: Int
}

type T2 {
  container: T1
  name: String
}

type T3 {
  container: T2
  name: String
}

type T4 {
  container: T3
}
