src/core/generator/snapshots/tailcall__core__generator__from_json__test__null_json_resp.snap
---
source: src/core/generator/from_json.rs
expression: cgf_module.to_sdl()
---
schema @server @upstream(baseURL: "https://example.com") {
  query: Query
}

type Query {
  root(age: Int!): Empty @http(path: "/users?age={{.args.age}}")
}
